--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -121,7 +121,7 @@
         document.head.appendChild(styleEl);
       }
       styleEl.textContent = `
-        .conversation-user-avatar {
+        .chat_user-avatar.conversation-user-avatar {
           background-image: url("${imageUrl}") !important;
           background-size: cover !important;
           background-position: center !important;
@@ -129,6 +129,7 @@
         }
       `;
     }
+
 
 
     /*********************************************************
