--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -1109,7 +1109,7 @@
         const sendBtn = document.createElement("div");
         sendBtn.className = "chat_multi-choice-send";
         sendBtn.style.width = "47px";
-        sendBtn.style.height = "47px";
+        sendBtn.style.height = "100%";
         sendBtn.style.display = "flex";
         sendBtn.style.alignItems = "center";
         sendBtn.style.justifyContent = "center";
