--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -69,7 +69,7 @@
 
 <!-- Existing HTML structure remains unchanged -->
 
-<script>
+<script type="module">
   // Immediately execute the chatbot initialization code
   (function() {
     console.log("Chatbot initialized.");
