--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -70,6 +70,7 @@
 <!-- Existing HTML structure remains unchanged -->
 
 <script type="module">
+  import { createClient, LiveTranscriptionEvents } from "https://cdn.jsdelivr.net/npm/@deepgram/sdk/+esm";
   
   (function() {
     console.log("Chatbot initialized.");
