--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -1950,3 +1950,38 @@ window.LiveTranscriptionEvents = LiveTranscriptionEvents;
 
   })();
 </script>
+
+<script>
+// This script ensures all links (existing and dynamically added) open in a new tab.
+document.addEventListener("DOMContentLoaded", function() {
+  // Update all existing <a> elements
+  function updateExistingLinks() {
+    document.querySelectorAll("a").forEach(function(anchor) {
+      anchor.setAttribute("target", "_blank");
+    });
+  }
+  updateExistingLinks();
+
+  // Set up a MutationObserver to update new links dynamically added to the DOM
+  const observer = new MutationObserver((mutations) => {
+    mutations.forEach((mutation) => {
+      mutation.addedNodes.forEach((node) => {
+        // Only process element nodes
+        if (node.nodeType === Node.ELEMENT_NODE) {
+          if (node.matches("a")) {
+            node.setAttribute("target", "_blank");
+          }
+          // Also update any descendant <a> elements
+          node.querySelectorAll("a").forEach((anchor) => {
+            anchor.setAttribute("target", "_blank");
+          });
+        }
+      });
+    });
+  });
+
+  // Observe changes to the document body for added nodes
+  observer.observe(document.body, { childList: true, subtree: true });
+});
+</script>
+
