--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -40,6 +40,18 @@
               </svg>
             </div>
           </div>
+          <div id="chat-canvas-toggle"
+               class="chat_input-button my-btn"
+               data-tooltip="Open Working Document">
+            <div class="icon-embed-small w-embed">
+              <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                   width="100%" height="100%" viewBox="0 0 24 24">
+                <path fill="currentColor"
+                      d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12
+                         a2 2 0 0 0 2-2V8zm0 2l6 6h-6z"/>
+              </svg>
+            </div>
+          </div>
           <div id="w-node-_819b1fcb-bef5-c69d-b33b-f104bd5e9695-8f158f72" class="chat_input-text">
             <div id="w-node-_256faa1f-1943-6b85-6f8e-bd7a8a4af011-8f158f72" class="code-embed-2 w-embed">
               <div class="form-input is-app">
