--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -44,11 +44,18 @@
                class="chat_input-button my-btn"
                data-tooltip="Open Working Document">
             <div class="icon-embed-small w-embed">
-              <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-                   width="100%" height="100%" viewBox="0 0 24 24">
-                <path fill="currentColor"
-                      d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12
-                         a2 2 0 0 0 2-2V8zm0 2l6 6h-6z"/>
+              <!-- BEGIN OpenAI-style pencil-plus SVG -->
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                   xmlns="http://www.w3.org/2000/svg">
+                <path d="M2.5 5.5C4.3 5.2 5.2 4 5.5 2.5C5.8 4 6.7 5.2 8.5 5.5C6.7 5.8 5.8 7 5.5 8.5C5.2 7 4.3 5.8 2.5 5.5Z"
+                      fill="currentColor" stroke="currentColor"
+                      stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M5.66282 16.5231L5.18413 19.3952C5.12203 19.7678 5.09098 19.9541 5.14876 20.0888C5.19933 20.2067 5.29328 20.3007 5.41118 20.3512C5.54589 20.409 5.73218 20.378 6.10476 20.3159L8.97693 19.8372C9.72813 19.712 10.1037 19.6494 10.4542 19.521C10.7652 19.407 11.0608 19.2549 11.3343 19.068C11.6425 18.8575 11.9118 18.5882 12.4503 18.0497L20 10.5C21.3807 9.11929 21.3807 6.88071 20 5.5C18.6193 4.11929 16.3807 4.11929 15 5.5L7.45026 13.0497C6.91175 13.5882 6.6425 13.8575 6.43197 14.1657C6.24513 14.4392 6.09299 14.7348 5.97903 15.0458C5.85062 15.3963 5.78802 15.7719 5.66282 16.5231Z"
+                      stroke="currentColor" stroke-width="2"
+                      stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M14.5 7L18.5 11"
+                      stroke="currentColor" stroke-width="2"
+                      stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
             </div>
           </div>
