--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -42,7 +42,7 @@
           </div>
           <div id="chat-canvas-toggle"
                class="chat_input-button my-btn"
-               data-tooltip="Open Working Document">
+               data-tooltip="Open the canvas">
             <div class="icon-embed-small w-embed">
               <!-- BEGIN OpenAI-style pencil-plus SVG -->
               <svg width="28" height="28" viewBox="0 0 24 24" fill="none"
