--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -2036,7 +2036,7 @@ window.LiveTranscriptionEvents = LiveTranscriptionEvents;
           <!-- Send -->
           <button id="canvas-send-btn"
                   class="canvas-icon-btn canvas-send-btn my-btn"
-                  data-tooltip="Send to Google Docs & email"
+                  data-tooltip="Send via email"
                   aria-label="Send">
             <!-- outline upload-to-cloud -->
             <svg width="26" height="26" viewBox="0 0 20 20" fill="none"
