--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -2105,10 +2105,10 @@ window.LiveTranscriptionEvents = LiveTranscriptionEvents;
           previewStyle: 'vertical',
           placeholder: 'Start writing…',
           toolbarItems: [
-            'heading', 'bold', 'italic', 'strike', '|',
-            'quote', 'ul', 'ol', 'hr', 'code', '|',
-            'table', 'link', 'image', '|',
-            'undo', 'redo', 'fullscreen'
+            ['heading', 'bold', 'italic', 'strike'],
+            ['quote', 'ul', 'ol', 'hr', 'code'],
+            ['table', 'link', 'image'],
+            ['undo', 'redo', 'fullscreen']
           ]
         });
   
