--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -2110,7 +2110,7 @@ window.LiveTranscriptionEvents = LiveTranscriptionEvents;
       js.onload = () => {
         const { Editor } = window.toastui;
         /* ⇢ add the highlight plugin */
-        import highlightReviewPlugin from './highlightReviewPlugin.js';   // path exactly as you saved it
+        import highlightReviewPlugin from 'https://six-ai-testing.netlify.app/highlightReviewPlugin.js';   // path exactly as you saved it
         
         window.__canvasEditor = new Editor({
           el:               document.getElementById('canvas-editor'),
