--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -491,7 +491,7 @@ window.LiveTranscriptionEvents = LiveTranscriptionEvents;
         return;
       }
       // Use flex on mobile; grid on desktop
-      chatInputWrapper.style.display = isMobile ? "flex" : "grid";
+      chatInputWrapper.style.display = isMobile ? "flex" : "flex";
       if (window.syncInputBar) window.syncInputBar();
     }
     
