--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -2135,7 +2135,7 @@ window.LiveTranscriptionEvents = LiveTranscriptionEvents;
     /* Build the panel */
     const canvas = document.createElement('div');
     canvas.id        = 'working-canvas';
-    canvas.className = 'canvas-panel';                // for CSS
+    canvas.className = 'canvas-panel wp-toolbar-offset';
     canvas.innerHTML = `
       <div class="canvas-header">
         <!-- ───── Left  -->
