--- a/Ai-Agent.html
+++ b/Ai-Agent.html
@@ -7,6 +7,7 @@
       <main class="shell15_main-wrapper">
         <div id="chat_conversation-wrapper" class="chat_conversation-wrapper"></div>
         <div class="chat_input-wrapper">
+          <div class="white-fill-below-input"></div> 
 
           <!-- New hamburger button (visible only on mobile) -->
           <div id="hamburger-menu-mobile" class="chat_input-button my-btn" data-tooltip="Open Menu">
